Arreglar: timeout de tareas impedia cargar todos los zips